Version 1.2

- Tasks tagged with "pin" are always show at the top of the indicator menu.


Version 1.1

- Tasks tagged as "endless" moved to the end of the indicator menu.